<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff0f0f0" >

    <RelativeLayout
        android:id="@+id/relativelayout_login"
        style="@style/ActionBar_Whole_Style_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/top_name"
            style="@style/ActionBar_Title_Style_1"
            android:text="@string/top_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/ui_split" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativelayout_login"
        android:orientation="vertical"
        android:paddingBottom="10.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.0"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="22.0dip" >

                <ImageView
                    android:id="@+id/head_imageview"
                    android:layout_width="87dp"
                    android:layout_height="87dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo_head" />
            </FrameLayout>

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="15.0dip"
                android:background="@drawable/global_input_top"
                android:drawableLeft="@drawable/login_icon_account"
                android:drawablePadding="15.0dip"
                android:ems="10"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:paddingBottom="2.0dip"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip"
                android:paddingTop="2.0dip"
                android:singleLine="true"
                android:textColorHint="#ff999999"
                android:textSize="16.0sp" />

            <EditText
                android:id="@+id/passwd_edit"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginBottom="20.0dip"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="20.0dip"
                android:background="@drawable/global_input_top"
                android:drawableLeft="@drawable/login_icon_password"
                android:drawablePadding="15.0dip"
                android:ems="10"
                android:hint="@string/hint_userpasswd"
                android:inputType="textPassword"
                android:paddingBottom="2.0dip"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip"
                android:paddingTop="2.0dip"
                android:singleLine="true"
                android:textColorHint="#ff999999"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="12.0dip"
                android:background="@drawable/btn_custom"
                android:singleLine="true"
                android:text="@string/btn_login"
                android:textColor="#ffffffff"
                android:textSize="18.0sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/newuser_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="17dp"
        android:layout_marginRight="16dp"
        android:text="@string/newuser" />

</RelativeLayout>