<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff0f0f0" >

    <RelativeLayout
        android:id="@+id/relativelayout_query"
        style="@style/ActionBar_Whole_Style_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/top_query"
            style="@style/ActionBar_Title_Style_1"
            android:text="@string/top_query" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/ui_split" />

        <TextView
            android:id="@+id/setting_about_back"
            style="@style/ActionBar_Left_Style_1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativelayout_query"
        android:orientation="vertical"
        android:paddingBottom="10.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.0"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="22.0dip" >
            </FrameLayout>

            <EditText
                android:id="@+id/querybook_edit"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginBottom="20.0dip"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="20.0dip"
                android:background="@drawable/global_input_top"
                android:drawablePadding="15.0dip"
                android:ems="10"
                android:hint="@string/hint_updatebooks"
                android:paddingBottom="2.0dip"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip"
                android:paddingTop="2.0dip"
                android:singleLine="true"
                android:textColorHint="#ff999999"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="12.0dip"
                android:background="@drawable/btn_custom"
                android:singleLine="true"
                android:text="@string/btn_search"
                android:textColor="#ffffffff"
                android:textSize="18.0sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>